# gemini-rag

./: .env  .gitignore  GEMINI.md  create_chromadb.py  gemini-agent-vc.txt  main.py  next_chromadb.py  next_chromadb_backup.py  pyproject.toml  requirements.txt  vector_play.py
documents/: 1.docx  1.xlsx
shop_chroma_db/: chroma.sqlite3
