[project]
name = "my-torch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb==0.6.3",
    "langchain-chroma==0.2.2",
    "langchain-deepseek==0.1.3",
    "langchain-docling>=1.1.0",
    "langchain-huggingface==0.1.2",
    "langchain-ollama>=0.3.10",
    "langchain-openai==0.3.11",
    "langchain-opendataloader-pdf>=0.0.2",
    "langchain-text-splitters==0.3.7",
    "loguru==0.7.3",
    "markitdown[all]>=0.0.2",
    "pydantic-settings==2.8.1",
    "sentence-transformers==3.4.1",
    "torch==2.6.0",
]
